# flume-sugar

./: .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  README.md
docs/: DESIGN_DECISIONS.md  GAME_DESIGN.md  NEXT_STEPS.md
docs/research/: README.md  ecs-choice.md  engine-requirements.md  lighting-implementation.md  pathfinding.md  procedural-modeling.md  rendering-architecture.md  ui-system.md
src/: main.rs  shader.wgsl  shader_instanced.wgsl
src/engine/: camera.rs  components.rs  debug_overlay.rs  input.rs  mesh.rs  mod.rs  navigation.rs  orca.rs  skin.rs  subdivide.rs  systems.rs
