[package]
name = "flume_sugar"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "23.0"
winit = "0.30"
pollster = "0.4"
bytemuck = { version = "1.18", features = ["derive"] }
glam = "0.29"
env_logger = "0.11"
bevy_ecs = "0.15"
rand = "0.8"
egui = "0.30"
egui-wgpu = "0.30"
egui-winit = "0.30"
